Nicer human formatting, and consistency with other examples